codecember 2023 - first commit

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,20 @@
-fastapi==0.88.0
-uvicorn==0.20.0
+certifi==2023.11.17
+cffi==1.16.0
+charset-normalizer==3.3.2
+click==8.1.7
+cryptography==41.0.7
+idna==3.6
+importlib-metadata==6.8.0
+jaraco.classes==3.3.0
+jeepney==0.8.0
+keyring==24.3.0
+keyrings.alt==5.0.0
+more-itertools==10.1.0
+pycparser==2.21
+pyicloud==1.0.0
+python-decouple==3.8
+requests==2.31.0
+SecretStorage==3.3.3
+tzlocal==5.2
+urllib3==2.1.0
+zipp==3.17.0
